--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2 w-50" style="height: 4px">
+                    <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -443,12 +443,12 @@
                         aria-valuemax="100"
                       ></div>
                     </div>
-                    <h2 style="font-weight: 800">
-                      <span class="h5 me-2" style="color: #6c8dd0"
-                        >Satisfaction score
+                    <p class="small" style="font-weight: 800">
+                      <span class="p me-2" style="color: #6c8dd0"
+                        ><small>Satisfaction score</small>
                       </span>
                       87
-                    </h2>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -492,7 +492,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2 w-50" style="height: 4px">
+                    <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -502,11 +502,12 @@
                         aria-valuemax="100"
                       ></div>
                     </div>
-                    <h2 style="font-weight: 800">
-                      <span class="h5 me-2" style="color: #6c8dd0"
-                        >Satisfaction score </span
-                      >60
-                    </h2>
+                    <p class="small" style="font-weight: 800">
+                      <span class="p me-2" style="color: #6c8dd0"
+                        ><small>Satisfaction score</small>
+                      </span>
+                      60
+                    </p>
                   </div>
                 </div>
               </div>
@@ -550,7 +551,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2 w-50" style="height: 4px">
+                    <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -560,11 +561,12 @@
                         aria-valuemax="100"
                       ></div>
                     </div>
-                    <h2 style="font-weight: 800">
-                      <span class="h5 me-2" style="color: #6c8dd0"
-                        >Satisfaction score </span
-                      >75
-                    </h2>
+                    <p class="small" style="font-weight: 800">
+                      <span class="p me-2" style="color: #6c8dd0"
+                        ><small>Satisfaction score</small>
+                      </span>
+                      75
+                    </p>
                   </div>
                 </div>
               </div>
@@ -608,7 +610,7 @@
                         ipsum</b
                       >
                     </p>
-                    <div class="progress my-2 w-50" style="height: 4px">
+                    <div class="progress my-2 w-50" style="height: 2px">
                       <div
                         class="progress-bar"
                         role="progressbar"
@@ -618,11 +620,12 @@
                         aria-valuemax="100"
                       ></div>
                     </div>
-                    <h2 style="font-weight: 800">
-                      <span class="h5 me-2" style="color: #6c8dd0"
-                        >Satisfaction score </span
-                      >45
-                    </h2>
+                    <p class="small" style="font-weight: 800">
+                      <span class="p me-2" style="color: #6c8dd0"
+                        ><small>Satisfaction score</small>
+                      </span>
+                      45
+                    </p>
                   </div>
                 </div>
               </div>
