--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,7 +39,10 @@
                 <div id="navmenubox" class="rounded-pill text-center">
                   <div class="mx-auto" id="">
                     <button class="mx-3 btn text-white" id="navitem">
-                      Support
+                      <p>
+                        <i class="fas fa-headphones-alt text-white me-2"></i>
+                        Support
+                      </p>
                     </button>
                   </div>
                 </div>
