--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #d3e8d7;
+                        background: #eef8f0;
                       "
                     >
                       <h5 class="my-2" id="testimony" style="">
@@ -434,7 +434,7 @@
                         ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
                       >
                     </p>
-                    <p class="p-0 m-0" style="color: #35d106">
+                    <p class="p-0 m-0" style="color: #324a5e">
                       <b
                         ><b style="color: black">Achievement : </b> Lorem
                         ipsum</b
@@ -451,10 +451,10 @@
                       ></div>
                     </div>
                     <p class="small" style="font-weight: 800">
-                      <span class="p me-2" style="color: #6c8dd0"
+                      <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      87
+                      <small>87</small>
                     </p>
                   </div>
                 </div>
@@ -467,7 +467,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #d3e8d7;
+                        background: #eef8f0;
                       "
                     >
                       <h5 class="my-2" id="testimony" style="">
@@ -493,7 +493,7 @@
                         ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
                       >
                     </p>
-                    <p class="p-0 m-0" style="color: #35d106">
+                    <p class="p-0 m-0" style="color: #324a5e">
                       <b
                         ><b style="color: black">Achievement : </b> Lorem
                         ipsum</b
@@ -510,10 +510,10 @@
                       ></div>
                     </div>
                     <p class="small" style="font-weight: 800">
-                      <span class="p me-2" style="color: #6c8dd0"
+                      <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      60
+                      <small>60</small>
                     </p>
                   </div>
                 </div>
@@ -526,7 +526,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #d3e8d7;
+                        background: #eef8f0;
                       "
                     >
                       <h5 class="my-2" id="testimony" style="">
@@ -552,7 +552,7 @@
                         ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
                       >
                     </p>
-                    <p class="p-0 m-0" style="color: #35d106">
+                    <p class="p-0 m-0" style="color: #324a5e">
                       <b
                         ><b style="color: black">Achievement : </b> Lorem
                         ipsum</b
@@ -569,10 +569,10 @@
                       ></div>
                     </div>
                     <p class="small" style="font-weight: 800">
-                      <span class="p me-2" style="color: #6c8dd0"
+                      <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      75
+                      <small>75</small>
                     </p>
                   </div>
                 </div>
@@ -585,7 +585,7 @@
                       class="h-100 w-100"
                       style="
                         border-radius: 24px 0 24px 24px;
-                        background: #d3e8d7;
+                        background: #eef8f0;
                       "
                     >
                       <h5 class="my-2" id="testimony" style="">
@@ -611,7 +611,7 @@
                         ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
                       >
                     </p>
-                    <p class="p-0 m-0" style="color: #35d106">
+                    <p class="p-0 m-0" style="color: #324a5e">
                       <b
                         ><b style="color: black">Achievement : </b> Lorem
                         ipsum</b
@@ -628,10 +628,10 @@
                       ></div>
                     </div>
                     <p class="small" style="font-weight: 800">
-                      <span class="p me-2" style="color: #6c8dd0"
+                      <span class="p me-1" style="color: #6c8dd0"
                         ><small>Satisfaction score</small>
                       </span>
-                      45
+                      <small>45</small>
                     </p>
                   </div>
                 </div>
