--- a/index.html
+++ b/index.html
@@ -146,6 +146,55 @@
         <div id="sizedBox" style=""></div>
       </div>
     </div>
+    <br />
+    <br />
+    <div class="container">
+      <h3 style="color: #324a5e">
+        <span style="color: #ed156a">Professional</span>,
+        <span style="color: #6c8dd0">licensed</span>, and
+        <span style="color: #298e3e">vetted</span> therapists who you can trust
+      </h3>
+      <h5 class="" style="color: #909090">
+        Some of our prestigious collaborators
+      </h5>
+      <br />
+      <div class="row">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-6">
+              <img class="w-100" src="/img/amsa.png" alt="" />
+            </div>
+            <div class="col-6">
+              <img class="w-100" src="/img/mha.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-6">
+              <img class="w-100" src="/img/mighty.png" alt="" />
+            </div>
+            <div class="col-6">
+              <img class="w-100" src="/img/thaid.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-6">
+              <img class="w-100" src="/img/ismho.png" alt="" />
+            </div>
+            <div class="col-6">
+              <img class="w-100" src="/img/tmhi.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
     <div style="background: #6c8dd0" class="">
       <div class="container text-center">
         <br />
