--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/alt.css" />
     <link rel="stylesheet" href="/style.css" />
     <title>Document</title>
   </head>
@@ -81,7 +82,7 @@
             belive makes the largest differece in the long term.
           </p>
           <p
-            class="p-0 m-0 gradient-text"
+            class="p-0 m-0 gradient-text box"
             style="
               font-size: 22px;
               width: 84%;
@@ -92,7 +93,7 @@
             Invest in your health with us : Happy Investing
           </p>
           <br />
-          <a id="joinuslanding" class="btn px-5 rounded-pill py-2" href=""
+          <a id="joinuslanding" class="btn px-5 rounded-pill py-2 box" href=""
             >Join us today</a
           >
           <br />
@@ -119,7 +120,7 @@
             </div>
           </div>
           <div class="col-md-5 pe-0">
-            <div class="w-100">
+            <div class="w-100 box">
               <br />
               <br />
               <h3>
@@ -159,7 +160,7 @@
       </h5>
       <br />
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 box">
           <div class="row">
             <div class="col-6">
               <img class="w-100" src="/img/amsa.png" alt="" />
@@ -169,7 +170,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 box">
           <div class="row">
             <div class="col-6">
               <img class="w-100" src="/img/mighty.png" alt="" />
@@ -179,7 +180,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 box">
           <div class="row">
             <div class="col-6">
               <img class="w-100" src="/img/ismho.png" alt="" />
@@ -206,7 +207,7 @@
         <hr class="w-75 mx-auto" style="background: white" />
         <br />
         <div class="row px-5">
-          <div class="col-md-4">
+          <div class="col-md-4 box">
             <br />
             <img id="paraIcon" src="/img/user.svg" alt="" />
             <br />
@@ -214,7 +215,7 @@
             <p id="paraValue">85%</p>
             <p id="parameters">Active users</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 box">
             <br />
             <img id="paraIcon" src="/img/msg.svg" alt="" />
             <br />
@@ -222,7 +223,7 @@
             <p id="paraValue">959595</p>
             <p id="parameters">Messages sent</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 box">
             <br />
             <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
             <br />
@@ -245,7 +246,7 @@
       <br id="mobnotbr" />
       <br />
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 box">
           <div
             class="text-center my-2"
             style="height: 500px; background: #d3e8d7; border-radius: 24px"
@@ -291,7 +292,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 box">
           <div
             class="text-center my-2"
             style="height: 500px; background: #e9eef8; border-radius: 24px"
@@ -340,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 box">
           <div
             class="text-center my-2"
             style="height: 500px; background: #fef8e0; border-radius: 24px"
@@ -386,7 +387,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 box">
           <div
             class="text-center my-2"
             style="height: 500px; background: #fcdce9; border-radius: 24px"
@@ -449,7 +450,7 @@
         <div class="">
           <div id="testimonybox" bg-primary>
             <div class="row mx-0" id="testimonyPrime">
-              <div class="col-md-6 my-2">
+              <div class="col-md-6 my-2 box">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -508,7 +509,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 my-2">
+              <div class="col-md-6 my-2 box">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -567,7 +568,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 my-2" id="testimonyPrimeChild">
+              <div class="col-md-6 my-2 box" id="testimonyPrimeChild">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -626,7 +627,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 my-2" id="testimonyPrimeChild">
+              <div class="col-md-6 my-2 box" id="testimonyPrimeChild">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -787,4 +788,5 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+  <script src="/alt.js"></script>
 </html>
