--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
           <br id="mobnotbr" />
           <br />
           <img id="pose" class="w-100 px-1 pe-0" src="/img/pose.png" alt="" />
-          <img id="pose2" class="w-100 px-0 pe-0" src="/img/pose2.png" alt="" />
+          <img
+            id="pose2"
+            class="w-100 px-0 pe-0 box"
+            src="/img/pose2.png"
+            alt=""
+          />
         </div>
       </div>
       <div style="height: 160px"></div>
