--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100" src="/img/step1.png" alt="" />
+                <img class="w-100 boxLeft" src="/img/step1.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100" src="/img/step2.png" alt="" />
+                <img class="w-100 boxRight" src="/img/step2.png" alt="" />
               </div>
             </div>
           </div>
@@ -794,4 +794,6 @@
     crossorigin="anonymous"
   ></script>
   <script src="/alt.js"></script>
+  <script src="/altright.js"></script>
+  <script src="/altleft.js"></script>
 </html>
