--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
         <div class="col-md-6 px-0" id="landingRight">
           <br id="mobnotbr" />
           <br />
-          <img id="pose" class="w-100 px-1 pe-0" src="/img/pose.png" alt="" />
+          <img
+            id="pose"
+            class="w-100 px-1 pe-0 boxRight"
+            src="/img/pose.png"
+            alt=""
+          />
           <img
             id="pose2"
             class="w-100 px-0 pe-0 box"
@@ -120,7 +125,7 @@
                 <img class="w-100 boxLeft" src="/img/step1.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxRight" src="/img/step2.png" alt="" />
+                <img class="w-100 box" src="/img/step2.png" alt="" />
               </div>
             </div>
           </div>
@@ -201,45 +206,54 @@
     <br />
     <br />
     <br />
-    <div style="background: #6c8dd0" class="">
-      <div class="container text-center">
-        <br />
-        <br />
-        <br id="mobnotbr" />
-        <h3 class="text-white">Get unmatched service</h3>
-        <h1 class="text-white" style="font-weight: 700">100% online</h1>
-        <br />
-        <hr class="w-75 mx-auto" style="background: white" />
-        <br />
-        <div class="row px-5">
-          <div class="col-md-4 box">
-            <br />
-            <img id="paraIcon" src="/img/user.svg" alt="" />
-            <br />
-            <br />
-            <p id="paraValue">85%</p>
-            <p id="parameters">Active users</p>
+    <div
+      style="
+        background: url(/img/mtn.svg);
+        background-size: cover;
+        background-position: center;
+      "
+      class=""
+    >
+      <div style="background: #1b2d3bb9">
+        <div class="container text-center">
+          <br />
+          <br />
+          <br id="mobnotbr" />
+          <h3 class="text-white">Get unmatched service</h3>
+          <h1 class="text-white" style="font-weight: 700">100% online</h1>
+          <br />
+          <hr class="w-50 mx-auto" style="background: white" />
+          <br />
+          <div class="row px-5">
+            <div class="col-md-4 box">
+              <br />
+              <img id="paraIcon" src="/img/user.svg" alt="" />
+              <br />
+              <br />
+              <p id="paraValue">85%</p>
+              <p id="parameters">Active users</p>
+            </div>
+            <div class="col-md-4 box">
+              <br />
+              <img id="paraIcon" src="/img/msg.svg" alt="" />
+              <br />
+              <br />
+              <p id="paraValue">959595</p>
+              <p id="parameters">Messages sent</p>
+            </div>
+            <div class="col-md-4 box">
+              <br />
+              <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
+              <br />
+              <br />
+              <p id="paraValue">99%</p>
+              <p id="parameters">Satisfaction score</p>
+            </div>
           </div>
-          <div class="col-md-4 box">
-            <br />
-            <img id="paraIcon" src="/img/msg.svg" alt="" />
-            <br />
-            <br />
-            <p id="paraValue">959595</p>
-            <p id="parameters">Messages sent</p>
-          </div>
-          <div class="col-md-4 box">
-            <br />
-            <img id="paraIcon" src="/img/satisfaction.svg" alt="" />
-            <br />
-            <br />
-            <p id="paraValue">99%</p>
-            <p id="parameters">Satisfaction score</p>
-          </div>
+          <br />
+          <br />
+          <br id="mobnotbr" />
         </div>
-        <br />
-        <br />
-        <br id="mobnotbr" />
       </div>
     </div>
     <div class="container">
