--- a/index.html
+++ b/index.html
@@ -31,26 +31,29 @@
     <div id="navpc" class="mx-0 fixed-top">
       <div class="container px-0">
         <div class="row mx-0">
-          <div class="col-7 pe-0">
+          <div class="col-6 pe-0">
             <img src="/img/guido_logo.svg" id="navlogo" alt="" />
           </div>
-          <div class="col-5 p-0">
-            <div class="row mx-0">
-              <div class="col-md-6">
-                <div id="navmenubox" class="rounded-pill text-center">
-                  <div class="mx-auto" id="">
-                    <button class="mx-3 btn text-white" id="navitem">
-                      <p>
-                        <i class="fas fa-headphones-alt text-white me-2"></i>
-                        Support
-                      </p>
-                    </button>
+          <div class="col-6 p-0">
+            <div class="col-md-4"></div>
+            <div class="col-md-8 ms-auto">
+              <div class="row mx-0">
+                <div class="col-md-6">
+                  <div id="navmenubox" class="rounded-pill text-center">
+                    <div class="mx-auto" id="">
+                      <button class="mx-3 btn text-white" id="navitem">
+                        <p>
+                          <i class="fas fa-headphones-alt text-white me-2"></i>
+                          Support
+                        </p>
+                      </button>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6" id="joinustop">
-                <div class="w-100 rounded-pill text-center" id="navjoinbtn">
-                  <a class="btn" href="" id="joinusnav">Join us Today</a>
+                <div class="col-md-6" id="joinustop">
+                  <div class="w-100 rounded-pill text-center" id="navjoinbtn">
+                    <a class="btn" href="" id="joinusnav">Join us Today</a>
+                  </div>
                 </div>
               </div>
             </div>
