--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img class="w-100 boxLeft" src="/img/step1.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100 box" src="/img/step2.png" alt="" />
+                <img class="w-100 boxRight" src="/img/step2.png" alt="" />
               </div>
             </div>
           </div>
@@ -269,10 +269,7 @@
       <br />
       <div class="row">
         <div class="col-md-3 box">
-          <div
-            class="text-center my-2"
-            style="height: 500px; background: #d3e8d7; border-radius: 24px"
-          >
+          <div class="text-center my-2">
             <div id="bgmtn">
               <div
                 class=""
@@ -298,27 +295,24 @@
             </div>
             <div class="px-0 text-start pt-2">
               <a
-                class="ms-0 ps-4 pe-3"
+                class="ms-0 px-4"
                 style="
                   color: #ffffff;
                   background: #225d4d;
                   font-size: 32px;
                   text-decoration: none;
-                  border-radius: 0 8px 8px 0;
+                  border-radius: 8px;
                 "
-                ><b>1 .</b></a
+                ><b>1</b></a
               >
-              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
                 Bespoke lessons for employees
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-3 box">
-          <div
-            class="text-center my-2"
-            style="height: 500px; background: #e9eef8; border-radius: 24px"
-          >
+          <div class="text-center my-2">
             <div id="bgmtn">
               <div
                 class=""
@@ -347,27 +341,24 @@
             </div>
             <div class="px-0 text-start pt-2">
               <a
-                class="ms-0 ps-4 pe-3"
+                class="ms-0 px-4"
                 style="
                   color: #ffffff;
                   background: #6c8dd0;
                   font-size: 32px;
                   text-decoration: none;
-                  border-radius: 0 8px 8px 0;
+                  border-radius: 8px;
                 "
-                ><b>1 .</b></a
+                ><b>2</b></a
               >
-              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
                 Insights on how to structure their work environment
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-3 box">
-          <div
-            class="text-center my-2"
-            style="height: 500px; background: #fef8e0; border-radius: 24px"
-          >
+          <div class="text-center my-2">
             <div id="bgmtn">
               <div
                 class=""
@@ -393,27 +384,24 @@
             </div>
             <div class="px-0 text-start pt-2">
               <a
-                class="ms-0 ps-4 pe-3"
+                class="ms-0 px-4"
                 style="
                   color: #ffffff;
                   background: #d66e4f;
                   font-size: 32px;
                   text-decoration: none;
-                  border-radius: 0 8px 8px 0;
+                  border-radius: 8px;
                 "
-                ><b>1 .</b></a
+                ><b>3</b></a
               >
-              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
                 Nutrition expert for everyone individually
               </p>
             </div>
           </div>
         </div>
         <div class="col-md-3 box">
-          <div
-            class="text-center my-2"
-            style="height: 500px; background: #fcdce9; border-radius: 24px"
-          >
+          <div class="text-center my-2">
             <div id="bgmtn">
               <div
                 class=""
@@ -439,17 +427,17 @@
             </div>
             <div class="px-0 text-start pt-2">
               <a
-                class="ms-0 ps-4 pe-3"
+                class="ms-0 px-4"
                 style="
                   color: #ffffff;
                   background: #ed156a;
                   font-size: 32px;
                   text-decoration: none;
-                  border-radius: 0 8px 8px 0;
+                  border-radius: 8px;
                 "
-                ><b>1 .</b></a
+                ><b>4</b></a
               >
-              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+              <p class="w-75 ms-0" style="font-size: 24px; font-weight: 500">
                 Mental wellness expert
               </p>
             </div>
