--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <br id="mobnotbr" />
       <br />
       <div class="row">
-        <div class="col-md-3 box">
+        <div class="col-md-3 box serviceBox">
           <div class="text-center my-2">
             <div id="bgmtn">
               <div
@@ -311,7 +311,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box serviceBox">
           <div class="text-center my-2">
             <div id="bgmtn">
               <div
@@ -357,7 +357,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box serviceBox">
           <div class="text-center my-2">
             <div id="bgmtn">
               <div
@@ -400,7 +400,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box serviceBox">
           <div class="text-center my-2">
             <div id="bgmtn">
               <div
