--- a/alt.html
+++ b/alt.html
@@ -4,24 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/alt.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Scroll to see the animation</h1>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
-    <div class="box"><h2>Content</h2></div>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player
+      src="/img/meditation.json"
+      background="transparent"
+      speed="1"
+      style="width: 300px; height: 300px"
+      loop
+      autoplay
+    ></lottie-player>
+    <lottie-player
+      src="https://assets5.lottiefiles.com/private_files/lf30_i5o0xxk6.json"
+      background="transparent"
+      speed="1"
+      style="width: 300px; height: 300px"
+      loop
+      autoplay
+    ></lottie-player>
+    <lottie-player
+      src="https://assets5.lottiefiles.com/packages/lf20_654rl2rh.json"
+      background="transparent"
+      speed="2.5"
+      style="width: 300px; height: 300px"
+      loop
+      autoplay
+    ></lottie-player>
+    <lottie-player
+      src="https://assets6.lottiefiles.com/packages/lf20_0mo4wjpc.json"
+      background="transparent"
+      speed="0.5"
+      style="width: 300px; height: 300px"
+      loop
+      autoplay
+    ></lottie-player>
+    <lottie-player
+      src="/img/user.json"
+      background="transparent"
+      speed="0.5"
+      style="width: 300px; height: 300px"
+      loop
+      autoplay
+    ></lottie-player>
   </body>
-  <script src="/alt.js"></script>
 </html>
