--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/alt.css" />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/alt.css" />
     <title>Document</title>
   </head>
   <body>
@@ -125,7 +125,7 @@
           <div class="col-md-7 px-0" style="margin-top: -100px">
             <div class="row mx-0">
               <div class="col-md-6 px-3 my-2">
-                <img class="w-100 boxLeft" src="/img/step1.png" alt="" />
+                <img class="w-100 boxLeft mb-3" src="/img/step1.png" alt="" />
               </div>
               <div class="col-md-6 px-3 my-2">
                 <img class="w-100 boxRight" src="/img/step2.png" alt="" />
@@ -155,6 +155,38 @@
                 <span>&#10003;</span> sit amet consectetur adipisicing.
               </p>
             </div>
+          </div>
+        </div>
+        <div id="sizedBox" style=""></div>
+        <div class="container">
+          <div class="row box">
+            <div
+              class="col-md-10 bg-white py-2 row mx-auto"
+              style="
+                border-radius: 24px;
+                border-left: solid 16px #6c8dd0;
+                border-right: solid 16px #6c8dd0;
+              "
+            >
+              <video
+                autoplay
+                loop
+                class="col-md-6 mx-auto"
+                style="border-radius: 32px"
+                src="/img/guido.mp4"
+              ></video>
+            </div>
+          </div>
+          <br />
+          <br />
+          <br />
+          <div class="col-md-8 mx-auto text-center">
+            <h3 class="text-white box">Lorem ipsum dolor sit amet.</h3>
+            <h5 class="box" style="color: #b4fff6a1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+              quisquam voluptates doloribus aperiam beatae nisi? Ad quisquam
+              voluptates doloribus aperiam beatae nisi?
+            </h5>
           </div>
         </div>
         <div id="sizedBox" style=""></div>
@@ -214,10 +246,11 @@
         background: url(/img/mtn.svg);
         background-size: cover;
         background-position: center;
+        background-attachment: fixed;
       "
       class=""
     >
-      <div style="background: #1b2d3bb9">
+      <div style="background: #020d16de">
         <div class="container text-center">
           <br />
           <br />
@@ -230,8 +263,17 @@
           <div class="row px-5">
             <div class="col-md-4 box">
               <br />
-              <img id="paraIcon" src="/img/user.svg" alt="" />
-              <br />
+              <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+              <lottie-player
+                class="mx-auto"
+                src="/img/user.json"
+                background="transparent"
+                speed="0.5"
+                style="width: 120px; height: 120px"
+                loop
+                autoplay
+              ></lottie-player>
               <br />
               <p id="paraValue">85%</p>
               <p id="parameters">Active users</p>
