--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             </div>
           </div>
           <br />
-          <br />
-          <br />
+          <br id="mobnotbr" />
+          <br id="mobnotbr" />
           <div class="col-md-8 mx-auto text-center">
             <h3 class="text-white box">Lorem ipsum dolor sit amet.</h3>
             <h5 class="box" style="color: #b4fff6a1">
@@ -265,7 +265,7 @@
               <br />
               <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-              <lottie-player
+              <!-- <lottie-player
                 class="mx-auto"
                 src="/img/user.json"
                 background="transparent"
@@ -273,7 +273,9 @@
                 style="width: 120px; height: 120px"
                 loop
                 autoplay
-              ></lottie-player>
+              ></lottie-player> -->
+              <img id="paraIcon" src="/img/user.svg" alt="" />
+              <br />
               <br />
               <p id="paraValue">85%</p>
               <p id="parameters">Active users</p>
