--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
               <video
                 autoplay
                 loop
+                controls
                 class="col-md-6 mx-auto"
                 style="border-radius: 32px"
                 src="/img/guido.mp4"
